# ComfyUI-Image-Compress

./: CHANGELOG.md  README.md  __init__.py  image_compress.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
examples/: README.md
workflows/: READMD.md  README.md  sdxl_workflow_with_image_compress.json
